test_suite/tests/ui/rename/non_string_on_externally_tagged.stderr
error: #[serde(rename)] must use a string name in externally tagged enums
 --> $DIR/non_string_on_externally_tagged.rs:5:13
  |
5 |     #[serde(rename = 1)]
  |             ^^^^^^^^^^
