test_suite/tests/ui/rename/non_string_on_externally_tagged.rs
use serde_derive::Serialize;

#[derive(Serialize)]
enum S {
    #[serde(rename = 1)]
    A,
}

fn main() {}
